--- a/capitulos/04ClasificacionTexto.qmd
+++ b/capitulos/04ClasificacionTexto.qmd
@@ -43,14 +43,13 @@ El problema de clasificación de texto se puede resolver desde diferentes perspe
 
 ## Modelado Probabilistico (Distribución Categórica) {#sec-categorical-distribution}
 
-Se inicia la descripción de clasificación de texto presentando un ejemplo sintético que ejemplifica los supuestos que se realizan en el modelo. La distribución categórica modela el evento de seleccionar $K$ eventos, los cuales pueden estar codificados como caracteres. Si esta selección se realiza $\ell$ veces se cuenta con una secuencia de eventos representados por caracteres. Por ejemplo, los $K$ eventos pueden ser representados por los caracteres 
+Se inicia la descripción de clasificación de texto presentando un ejemplo sintético que ejemplifica los supuestos que se realizan en el modelo. La distribución categórica modela el evento de seleccionar $K$ eventos, los cuales pueden estar codificados como caracteres. Si esta selección se realiza $\ell$ veces se cuenta con una secuencia de eventos representados por caracteres. Por ejemplo, los $K$ eventos pueden ser representados por los caracteres *w*, *x*, *y* y *z*. Utilizando este proceso se puede utilizar para ejemplificar el proceso de asociar una secuencia a una clase, e.g., positiva o negativa.
+
+El primer paso es seleccionar los parámetros de dos distribuciones tal y como se muestra en las siguientes primeras dos líneas. Cada distribución se asume que es la generadora de una clase. El segundo paso es tomar una muestra de cada distribución, en particular se toman $1000$ muestras con el siguiente procedimiento. En cada iteración se toma una muestra de una distribución Gausiana ($\mathcal N(15, 3)$), la variable aleatoria se guarda en la variable `length`. Esta variable aleatoria representa la longitud de la secuencia. El tercer paso es sacar la muestra de las distribuciones categóricas definidas previamente. Las muestras son guardadas en la lista `D` junto con la clase a la que pertenece $0$ y $1.$ 
 
 
-repetitions can be represented as a sequence of characters. Consequently, the distribution can illustrate the generation sequences associated with different classes, e.g., positive or negative.
-
-The first step is to create the dataset. As done previously, two distributions are defined, one for each class; it can be observed that each distribution has different parameters. The second step is to sample these distributions; the distributions are sampled 1000 times with the following procedure. Each time, a random variable representing the number of outcomes taken from each distribution is drawn from a Normal $\mathcal N(15, 3)$ and stored in the variable `length.` The random variable indicates the number of outcomes for each Categorical distribution; the results are transformed into a sequence, associated to the label corresponding to the positive and negative class, and stored in the list `D.`
-
-```python
+```{python}
+#| echo: true
 pos = multinomial(1, [0.20, 0.20, 0.35, 0.25])
 neg = multinomial(1, [0.35, 0.20, 0.25, 0.20])
 length = norm(loc=15, scale=3)
@@ -62,46 +61,57 @@ for l in length.rvs(size=1000):
     D.append((id2w(neg.rvs(round(l))), 0))
 ```
 
-The following table shows four examples of this process; the first column contains the sequence, and the second the associated label.
+La @tbl-clasificacion-texto-generado muestra los primeros cuatro ejemplos generados con el procedimiento anterior. La primera columna muestra la secuencia y asociada a cada secuencia se muestra la clase que corresponde a la secuencia. 
 
-|Text          |Label    |
-|--------------|---------|
-|x w x x z w y | positive       |
-|y w z z z x w | negative       |
-|z x x x z x z w x w | positive |
-|x w z w y z z z z w | negative |
 
-As done previously, the first step is to compute the likelihood given that dataset; considering that the data comes from a Categorical distribution, the procedure to estimate the parameters is similar to the ones used to estimate the prior. The following code estimates the data parameters corresponding to the positive class. It can be observed that the parameters estimated are similar to the ones used to generate the dataset. 
+```{python}
+#| echo: false
+#| tbl-cap: Conjunto generado de clasificación de texto
+#| label: tbl-clasificacion-texto-generado
+txt =  '|Texto         |Clase    |\n'
+txt += '|--------------|---------|\n'
+m = {0: 'Negativo', 1: 'Positivo'}
+for data in D[:4]:
+    txt += f'|{data[0]}|{m[data[1]]}|\n'
+Markdown(txt)
+```
 
-```python
+El primer paso es encontrar la verosimilitud dado el conjunto de datos `D`. El siguiente código calcula la verosimilitud de la clase positiva. 
+
+```{python}
+#| echo: true
 D_pos = []
 [D_pos.extend(data.split()) for data, k in D if k == 1]
 words, l_pos = np.unique(D_pos, return_counts=True)
 w2id = {v: k for k, v in enumerate(words)}
 l_pos = l_pos / l_pos.sum()
 l_pos
-array([0.25489421, 0.33854064, 0.20773186, 0.1988333 ])
 ```
 
-An equivalent procedure is performed to calculate the likelihood of the negative class.
+Un procedimiento equivalente se puede realizar para obtener la verosimilitud de la clase negativa. 
 
-```python
+```{python}
+#| echo: true
 D_neg = []
 [D_neg.extend(data.split()) for data, k in D if k == 0]
 _, l_neg = np.unique(D_neg, return_counts=True)
 l_neg = l_neg / l_neg.sum()
+l_neg
 ```
 
-The prior is estimated with the following code, equivalent to the one used on all the examples seen so far. 
+La probabilidad a priori se puede calcular con la siguientes instrucciones. 
 
-```python
+```{python}
+#| echo: true
 _, priors = np.unique([k for _, k in D], return_counts=True)
 N = priors.sum()
 prior_pos = priors[1] / N
 prior_neg = priors[0] / N
 ```
 
-Once the parameters have been identified, these can be used to predict the class of a given sequence. The first step is to compute the likelihood, e.g., $\mathbb P($w w x z$\mid \mathcal Y)$. It can be observed that the sequence needs to be transformed into tokens which can be done with the `split` method. Then, the token is converted into an index using the mapping `w2id`; once the index is retrieved, it can be used to obtain the parameter associated with the word. The likelihood is the product of all the probabilities; however, this product is computed in log space. 
+Una ves que se han identificador los parámetroos, estos pueden ser utilizados para predecir la clase dada una secuencia. El primer paso es calcular la verosimilitud, e.g., $\mathbb P($w w x z$\mid \mathcal Y)$. Se observa que la secuencia tiene se tiene que transformar en términos, esto se puede realizar con el método `split`. Después, los términos se convierten al identificador que corresponde al parámetro del token con el mapa `w2id`. Una vez que se identifica el índice se puede 
+
+It can be observed that the sequence needs to be transformed into tokens which can be done with the `split` method. Then, the token is converted into an index using the mapping `w2id`; once the index is retrieved, it can be used to obtain the parameter associated with the word. The likelihood is the product of all the probabilities; however, this product is computed in log space. 
 
 ```python
 def likelihood(params, txt):
